# aztec-noir

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  extension.toml  rust-toolchain.toml
.github/workflows/: ci.yml
languages/noir/: textobjects.scm
src/: lib.rs
