[package]
name = "zoir"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Noir language support for Zed, focused on Aztec network development"
repository = "https://github.com/Hydepwns/zoir"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.5"

[profile.release]
lto = true
opt-level = "z"
strip = true
